.metadata/.plugins/org.eclipse.cdt.ui/LED blink.build.log
15:33:15 **** Incremental Build of configuration Debug for project LED blink ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F405xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'StartTask03':
../Core/Src/main.c:227:2: error: too many arguments to function 'HAL_GPIO_TogglePin'
  227 |  HAL_GPIO_TogglePin(GPIOC,GPIO_PIN_6,GPIO_PIN_SET);
      |  ^~~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:278,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h:236:6: note: declared here
  236 | void HAL_GPIO_TogglePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin);
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'StartDefaultTask':
../Core/Src/main.c:246:4: error: too many arguments to function 'HAL_GPIO_TogglePin'
  246 |    HAL_GPIO_TogglePin(GPIOB,GPIO_PIN_13,GPIO_PIN_SET);
      |    ^~~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:278,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h:236:6: note: declared here
  236 | void HAL_GPIO_TogglePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin);
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'StartTask02':
../Core/Src/main.c:265:4: error: too many arguments to function 'HAL_GPIO_TogglePin'
  265 |    HAL_GPIO_TogglePin(GPIOB,GPIO_PIN_14,GPIO_PIN_SET);
      |    ^~~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:278,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h:236:6: note: declared here
  236 | void HAL_GPIO_TogglePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin);
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

15:33:17 Build Failed. 4 errors, 0 warnings. (took 1s.653ms)

